# qrawatch

./: .gitignore  DATA_SOURCES.md  Makefile  PROJECT_BRIEF.md  README.md  REFERENCES.md  RESEARCH_DESIGN.md  VALIDATION_CHECKLIST.md  pyproject.toml  requirements.txt
configs/: fiscaldata_datasets.json  fred_series_core.json
docs/: BENCHMARK_SEARCH_CLOSURE.md  DATA_DICTIONARY.md  GPT_PRO_AUDIT_BRIEF.md  GPT_PRO_PRICING_AUDIT_PROMPT.md  GUIDANCE_KEYWORD_LIBRARY.md  PRICING_METHODS.md  PRICING_RESULTS_MEMO.md  QRA_CAPTURE_PROTOCOL.md  REGRESSION_SPECS.md  STATUS_GLOSSARY.md
logs/: README.md
notes/: FIRST_EMPIRICAL_OUTPUTS.md
output/: README.md
scripts/: 00_bootstrap.py  01_download_fiscaldata.py  02_download_fred.py  03_download_qra_materials.py  04_extract_qra_text.py  05_download_investor_allotments.py  06_download_sec_nmfp.py  07_download_primary_dealer.py  08_build_ati_index.py  09_build_qra_event_panel.py  10_run_event_study.py  11_run_plumbing_regressions.py  12_build_public_duration_supply.py  13_build_official_qra_capture.py  14_qra_quality_report.py  15_build_publish_artifacts.py  16_build_investor_allotments_inventory.py  17_build_official_ati.py  18_build_primary_dealer_inventory.py  19_build_sec_nmfp_inventory.py  20_enrich_official_qra_capture.py  21_validate_backend.py  22_seed_forward_official_quarters.py  23_seed_qra_shock_template.py  24_build_qra_event_elasticity.py  25_build_qra_identification_tables.py  26_build_auction_absorption.py  27_build_qra_intraday_event_panel.py  28_seed_qra_causal_review_inputs.py  29_build_pricing_panels.py  (+3 more)
(+170 files in other folders)
