[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ati-shadow-policy"
version = "0.1.0"
description = "Research scaffold for Treasury maturity composition as shadow balance-sheet policy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.2.0",
  "pdfplumber>=0.11.0",
  "statsmodels>=0.14.0",
  "pyarrow>=15.0.0",
  "tabulate>=0.9.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
